--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     ></script>
     <script
       nomodule
+      type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script src="https://smtpjs.com/v3/smtp.js"> </script>
+    <script type="module" src="https://smtpjs.com/v3/smtp.js"> </script>
   </head>
   <body>
     <div id="root"></div>
